# The-Intern

./: .gitignore  README.md  helper.txt
backend/: package-lock.json  package.json
backend/src/: server.ts  test-gemini.ts
client-rust/: Cargo.toml
client-rust/src/: command.rs  logger.rs  main.rs  runner.rs  server.rs  tray.rs
client-rust/src/windows/: audio.rs  input.rs  mod.rs  screen.rs
doc/: commands.json  commands.md
frontend/: chat.html  download.html  index.html  package-lock.json  package.json  vite.config.js
frontend/public/downloads/: README.txt
frontend/src/chat/: App.svelte
frontend/src/download/: App.svelte
frontend/src/shared/: styles.css
test/: commands_win.json  run.jsonl
