[package]
name = "intern-local"
version = "0.1.0"
edition = "2021"

authors = ["The Intern"]
description = "Windows Local PC Body (CLI stub for command flow)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.21"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
enigo = "0.6"
screenshots = "0.8"
tray-item = "0.10"
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
windows-sys = "0.52"
